# dbrunner-rs

./: Cargo.toml  README.md  build.rs  devenv.nix  devenv.yaml  flake.nix
.github/workflows/: nix-test.yml
proto/: dbrunner.proto
src/: cache.rs  main.rs  rpc.rs  sql.rs
src/sql/: error.rs  executor.rs  fmt.rs  uid.rs
