cargo-features = ["edition2024"]

[package]
name = "dbrunner"
description = "The SQLite-backed arbitrary SQL query executor."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/database-playground/dbrunner-rs"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
blake3 = "1.5.4"
itertools = "0.13.0"
mimalloc-rust = "0.2.1"
prost = "0.13.1"
redis = { version = "0.26.1", default-features = false, features = [
    "tokio-comp",
] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sql-insight = "0.2.0"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "time"] }
tokio-stream = "0.1.15"
tonic = { version = "0.12.1", features = [
    "codegen",
    "prost",
    "server",
], default-features = false }

[dev-dependencies]
rstest = { version = "0.22.0", default-features = false }

[build-dependencies]
tonic-build = "0.12.1"

[profile.release]
lto = "thin"
